# geo_ai_metrics

./: README.md  pyproject.toml
geo_ai_metrics/: metrics.py  utils.py
geo_ai_metrics/annotation/: __init__.py  annotation.py  coco_geoai_360.py
geo_ai_metrics/classification/: classification_accuracy.py
geo_ai_metrics/data/360/annotations/: Unnamed Run  1_Camera 4 360_0_2.json  pred.json
geo_ai_metrics/data/aerial/annotations/: gt.json  pred.json
geo_ai_metrics/data/aerial/labels/: 3767_3767_18.txt
geo_ai_metrics/examples/: classification_accuracy.py  dev_convert_yolo2coco.py  dev_fix_360_annot.py  localization360_accuracy.py  localization_accuracy.py  readme.md
geo_ai_metrics/localization/: localization_accuracy.py
geo_ai_metrics/metrics/: __init__.py  classification_accuracy.py  localization360_accuracy.py  localization_accuracy.py
geo_ai_metrics/utils/: localization_metric.py  metrics.py  utils.py  visualization.py
tests/: test_bbox_iou.py  test_classification_accuracy.py  test_match_predictions.py
tests/annotation/: test_360.py  test_annotation.py
tests/annotation/test_files/: read_coco_default.json  read_coco_empty.json  test_coco.json  test_coco_2.json
tests/annotation/test_files/test_yolo/: 1.txt  10.txt
tests/annotation/test_files/test_yolo_2/: 1.txt  10.txt
tests/classification/: test_classification_accuracy.py
tests/localization/: test_localization_accuracy.py
tests/utils/: test_box_iou.py  test_mask_iou.py
