[tool.poetry]
name = "geo-ai-metrics"
version = "0.1.0"
description = ""
authors = ["SanchoPanso <20alexchernik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pytest = "^7.4.3"
opencv-python = "^4.8.1.78"
easydict = "^1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
